# libquickjs-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: alloc.rs  atom.rs  class.rs  func.rs  lib.rs  main.rs  prop.rs  utils.rs  value.rs
src/serde/: de.rs  error.rs  mod.rs  pool.rs  ser.rs
src/tests/: globals.rs
src/utils/: cstr.rs  global.rs  mod.rs  ptr.rs  vec.rs
tests/: func.rs  global.rs  jobs.rs  module.rs  property.rs  prototype.rs  script.rs  serde_de.rs  serde_ser.rs  serialize.rs  simple_script.rs  weakref.rs
