[package]
name = "libquickjs"
version = "1.12.0"
edition = "2024"

[features]
serde = ["dep:serde"]

[dependencies]
bitflags = "2.10"
rquickjs-sys = "0.10"
serde = { version = "1.0", optional = true }

[dev-dependencies]
rquickjs-sys = { version = "*", features = ["bindgen", "dump-leaks"] }
serde = { version = "1.0", features = ["derive"] }
